Added jquery scripts, added title and moved file inclusions as to eliminate errors.
Also edited menu so that jav script will handle div clicks
Signed-off-by: Saku Rautiainen <saku.rautiainen@intel.com>

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script language="Javascript" type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script language="Javascript" type="text/javascript" src="js/menu.js"></script>
 <link type="text/css" rel="stylesheet" href="style/stylesheet.css"/>
-<title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<title>Saku Rautiainen</title>
+
 </head>
 <body>
     <div id="header">
@@ -10,21 +15,15 @@
         <a href="mailto:you@yourdomain.com"><p id="email">saku@yourdomain.com</p></a>
     </div>
     <div class="left">
-        <ul>
-            <li class="menu">
-                <a href="">
-                    <div>Me</div>
-                </a>
+        <ul id="menu">
+            <li class="menu_item">
+                <div class="menu_div">Me</div>
             </li>
-            <li class="menu">
-                <a href="">
-                    <div>Resume</div>
-                </a>
+            <li class="menu_item">
+                <div class="menu_div">Resume</div>
             </li>
-            <li class="menu">
-                <a href="">
-                    <div>Contact</div>
-                </a>
+            <li class="menu_item">
+                <div class="menu_div">Contact</div>
             </li>
         </ul>
     </div>
