Added page for projects

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <div class="menu_div" id="me">Me</div>
             </li>
             <li class="menu_item">
+                <div class="menu_div" id="resume">Projects</div>
+            </li>
+            <li class="menu_item">
                 <div class="menu_div" id="resume">Resume</div>
             </li>
             <li class="menu_item">
