Edited project and contact files. Added linkedin, twitter and github links to page. Edited menu so it directs to project page. Edited styling

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,9 @@
-<h4>contact</h4>
-<p>liirum lapsum</p>
-<h4>Me</h4>
-<p>liirum lapsum</p>
+<h4>Contact information</h4>
+<p>
+    <ul>
+        <li>Email: saku.rautiainen (at) iki.fi</li>
+        <li>IRC nick: ukas@(ircnet, scoutlink, freenode)</li>
+        <li>Phone: +358442856190</li>
+        <li>IBAN: </li>
+    </ul>
+</p>
