--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 
 
 <h4>School projects</h4>
-<p>liirum lapsum</p>
+<p>Bahcelor thesis source and documentation</p>
+<p>Master thesis</p>
 <h4>Personal projects</h4>
-<p>liirum lapsum</p>
+<p>NiSa anomus, 2048 clone for the Partioaitta stipend that I applied for my scout troop</p>
+
