--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="header">
         <p id="name">Saku Rautiainen</p>
-        <a href="mailto:you@yourdomain.com"><p id="email">saku@yourdomain.com</p></a>
+        <a href="mailto:saku.rautiainen@iki.fi"><p id="email">saku.rautiainen (at) iki.fi</p></a>
     </div>
     <div class="left">
         <ul id="menu">
@@ -21,7 +21,7 @@
                 <div class="menu_div" id="me">Me</div>
             </li>
             <li class="menu_item">
-                <div class="menu_div" id="resume">Projects</div>
+                <div class="menu_div" id="projects">Projects</div>
             </li>
             <li class="menu_item">
                 <div class="menu_div" id="resume">Resume</div>
@@ -35,7 +35,18 @@
         
     </div>
     <div id="footer">
-        <p id="linkedin">Linkedin</p>
+        <p class="social_buttons">
+            <a href="http://www.linkedin.com/pub/saku-rautiainen/45/251/451" target="_blank"><img src="image/LinkedIn-Logo_Small.png" width= "75" height="21" border="0" alt="View Saku Rautiainen's profile on LinkedIn">
+            </a>
+        </p>
+        <p class="social_buttons">
+            <a href="https://github.com/ukasofisosaari" target="_blank"><img src="image/GitHub-Mark-Light-32px.png" alt="View Saku Rautiainen's profile on GitHub">
+            </a>
+        </p>
+        <p class="social_buttons">
+            <a href="https://twitter.com/ukasofisosaari" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ukasofisosaari</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </p>
     </div>
 </body>
 </html>
