Commited logos and profile picture. added information to me page Signed-off-by: Saku Rautiainen <saku.rautiainen@intel.com>

--- a/me.html
+++ b/me.html
@@ -1,6 +1,6 @@
+<img id="profiili" src="image/profiili.png" alt="Profile picture">
 
-
-<h4>Me</h4>
-<p>liirum lapsum</p>
-<h4>Me</h4>
-<p>liirum lapsum</p>
+<h4>Intro</h4>
+<p>This is my personal webpage. It includes my work resume, links to some of my school and hobby projects as well as my contract information.</p>
+<h4>Scouting and sailing</h4>
+<p>I'm very active sea scout in a sea scout troop in Tampere. Through sea scouting I've also come to enjoy sailing.</p>
