Added server.html page, and added it to meny. server.html is placeholder for the input that cgi script will create.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li class="menu_item">
                 <div class="menu_div" id="contact">Contact</div>
             </li>
+            <li class="menu_item">
+                <div class="menu_div" id="server">Server</div>
+            </li>
         </ul>
     </div>
     <div class="right">
