Not finished, workaround for load() function since it fails.

--- a/me.html
+++ b/me.html
@@ -1,4 +1,4 @@
-<img id="profiili" src="image/profiili.png" alt="Profile picture">
+<img id='profiili' src='image/profiili.png' alt='Profile picture'>
 
 <h4>Intro</h4>
 <p>This is my personal webpage. It includes my work resume, links to some of my school and hobby projects as well as my contact information.</p>
