--- a/server.html
+++ b/server.html
@@ -5,6 +5,6 @@
 
 <script>
 		 $.getJSON('/server_uptime.json', function load_uptime(data){
-            document.getElementById("uptime").innerHTML=data};
+            document.getElementById("uptime").innerHTML=data});
   }
 </script>
