Simplified JSON data format
Simplified JSON format and added upload

--- a/server.html
+++ b/server.html
@@ -5,6 +5,8 @@
 
 <script>
 		 $.getJSON('/server_uptime.json', function load_uptime(data){
-            document.getElementById("uptime").innerHTML=data});
+			var uptime = data.uptime;
+			var unix_time = data.unix_time;
+            document.getElementById("uptime").innerHTML="Uptime: " + uptime +" Date: " + unix_time});
   }
 </script>
