--- a/server.html
+++ b/server.html
@@ -1,4 +1,4 @@
-<!--<script language="Javascript" type="text/javascript" src="js/server_information.js"></script>-->
+<<script language="Javascript" type="text/javascript" src="js/server_information.js"></script>
 
 <h4>This page is under construction</h4>
 <p>Will display information about the server</p>
