--- a/server.html
+++ b/server.html
@@ -2,5 +2,12 @@
 
 <h4>This page is under construction</h4>
 <p>Will display information about the server</p>
-
-<div class="server_information" id="uptime">Uptime not available</div>
+<div class="div_table" id="server_information">
+<div class="server_information" id="OS_type">Server OS type not available</div>
+<div class="server_information" id="OS_arch">Server OS architecture not available</div>
+<div class="server_information" id="server_cpu_model">Server CPU model not available</div>
+<div class="server_information" id="server_cpu_speed">Server CPU speed not available</div>
+<div class="server_information" id="server_hostname">Server hostname not available</div>
+<div class="server_information" id="server_uptime">Server Uptime not available</div>
+<div class="server_information" id="server_date">Current date according to server not available</div>
+</div>
