--- a/server.html
+++ b/server.html
@@ -9,5 +9,5 @@
 <div class="server_information" id="server_cpu_speed">Server CPU speed not available</div>
 <div class="server_information" id="server_hostname">Server hostname not available</div>
 <div class="server_information" id="server_uptime">Server Uptime not available</div>
-<div class="server_information" id="server_date">Current date according to server not available</div>
+<div class="server_information" id="nodejs_version">Current date according to server not available</div>
 </div>
