--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,10 @@
 
 
 <h4>School projects</h4>
-<p>Bahcelor thesis source and documentation</p>
-<p>Master thesis</p>
+<p>My Bachelor of Science thesis topic was "<a id="url_text" href="resources/bachelor_thesis.pdf">Calculating GPS position using open source libraries</div></a>"</p>
+<p>My Master of Science topic was "<a id="url_text" href="resources/d-tyo.pdf">Prototype for Automatic Content Discovery in Mobile Ad Hoc
+Networks</a>"</p>
 <h4>Personal projects</h4>
-<p>NiSa anomus, 2048 clone for the Partioaitta stipend that I applied for my scout troop</p>
+<p><a id="url_text" href="https://github.com/ukasofisosaari/nisa_anomus">NiSa anomus</a> is a <a id="url_text" href="http://gabrielecirulli.github.io/2048/">2048</a> clone that I created for Partioaitta stipend application. Purpose was to 
+separate my scout troop from the rest of the applications.</p>
 
