--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,3 @@
-<h4>resume</h4>
-<p>liirum lapsum</p>
-<h4>Me</h4>
-<p>liirum lapsum</p>
+<h4>Resume</h4>
+<p>For now you will have to settle for clicking the Linkedin link below.</p>
+
