--- a/server.html
+++ b/server.html
@@ -1,7 +1,9 @@
 <script language="Javascript" type="text/javascript" src="js/server_information.js"></script>
 
-<h4>This page is under construction</h4>
-<p>Will display information about the server</p>
+<h4>Server</h4>
+<p>This website is hosted on my personal Raspberry Pi server running Raspbian. 
+Page hosting and backend functions were created with Node.js. Front end is combination 
+of HTML, CSS and javascript. Javascript library jquery was used with some of visuals.</p>
 <div class="div_table" id="server_information">
 <div class="server_information" id="OS_type">Server OS type not available</div>
 <div class="server_information" id="OS_arch">Server OS architecture not available</div>
