--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <h4>Contact information</h4>
 <p>
-    <ul>
-        <li>Email: saku.rautiainen (at) iki.fi</li>
-        <li>IRC nick: ukas@(ircnet, scoutlink, freenode)</li>
-        <li>Phone: +358442856190</li>
-        <li>IBAN: </li>
-    </ul>
+    
+<div class="div_table" id="contact_information">
+<div class="div_table_cell_1st_column" id="contact_email">Email: saku.rautiainen (at) iki.fi</div>
+<div class="div_table_cell_1st_column" id="irc_nick">IRC nick: ukas@(ircnet, scoutlink, freenode)</div>
+<div class="div_table_cell_1st_column" id="Phone">Phone: +358442856190</div>
+</div>
 </p>
