--- a/server.html
+++ b/server.html
@@ -5,10 +5,10 @@
 Page hosting and backend functions were created with Node.js. Front end is combination 
 of HTML, CSS and javascript. Javascript library jquery was used with some of visuals.</p>
 <div class="div_table" id="server_information">
-<div class="server_information" id="OS_type">Server OS type not available</div>
-<div class="server_information" id="OS_arch">Server OS architecture not available</div>
-<div class="server_information" id="server_cpu_model">Server CPU model not available</div>
-<div class="server_information" id="server_cpu_speed">Server CPU speed not available</div>
-<div class="server_information" id="server_uptime">Server Uptime not available</div>
-<div class="server_information" id="nodejs_version">Current date according to server not available</div>
+<div class="div_table_cell_1st_column" id="OS_type">Server OS type not available</div>
+<div class="div_table_cell_1st_column" id="OS_arch">Server OS architecture not available</div>
+<div class="div_table_cell_1st_column" id="server_cpu_model">Server CPU model not available</div>
+<div class="div_table_cell_1st_column" id="server_cpu_speed">Server CPU speed not available</div>
+<div class="div_table_cell_1st_column" id="server_uptime">Server Uptime not available</div>
+<div class="div_table_cell_1st_column" id="nodejs_version">Current date according to server not available</div>
 </div>
